Error Mitigation/MagiCoder/Data/javax_xml_transform_stax/javax_xml_transform_staxOutputResult.txt
Sample: StAXSource_2
----------------------------------------------------------------
output:
./Data/javax_xml_transform_stax/javaFiles/StAXSource_2.java:7: error: no suitable constructor found for StAXSource(no arguments)
        StAXSource staxSource = new StAXSource();
                                ^
    constructor StAXSource.StAXSource(XMLEventReader) is not applicable
      (actual and formal argument lists differ in length)
    constructor StAXSource.StAXSource(XMLStreamReader) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: StAXSource_4
----------------------------------------------------------------
output:
./Data/javax_xml_transform_stax/javaFiles/StAXSource_4.java:8: error: cannot find symbol
        XMLStreamReader reader = factory.createXMLStreamReader(new StringReader("<root>Hello</root>"));
                                                                   ^
  symbol:   class StringReader
  location: class StAXSource_4
1 error


================================================================

Sample: StAXSource_5
----------------------------------------------------------------
output:
./Data/javax_xml_transform_stax/javaFiles/StAXSource_5.java:8: error: cannot find symbol
        XMLStreamReader reader = factory.createXMLStreamReader(new StringReader("<root>Hello</root>"));
                                                                   ^
  symbol:   class StringReader
  location: class StAXSource_5
1 error


================================================================

